--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
             <div class="search ps-3 pe-3 d-none d-lg-block">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
-            <button type="button" class="btn btn-primary rounded-pill">Login</button>
-
+            <a class="btn btn-primary rounded-pill" href="#" role="button">Link</a>
           </div>
         </div>
       </nav>
+      <div class="landing d-flex  justify-content-center align-items-center">
+       <div class="text-containt text-light">
+        <h1>Taste The Creativity</h1>
+        <P class="fs-6 text-white-50 mb-4">we make awesome graphic and web design </P>
+        <a class="btn btn-primary rounded-pill " href="#" role="button">Get Started</a>
+       </div>
+      </div>
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>  
