--- a/index.html
+++ b/index.html
@@ -1,59 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- css folder -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Noto+Sans+Arabic:wght@100..900&family=Poppins&family=Roboto:wght@400;500;700&family=Sevillana&family=Work+Sans:ital,wght@0,500;1,500&display=swap" >
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Jersey+15&family=Noto+Sans+Arabic:wght@100..900&family=Poppins&family=Roboto:wght@400;500;700&family=Sevillana&family=Work+Sans:ital,wght@0,500;1,500&display=swap"
+    />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg sticky-top">
+      <div class="container">
+        <a class="navbar-logo" href="#">khaoula</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <i class="fa-solid fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item p-1">
+              <a class="nav-link Active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item p-1">
+              <a class="nav-link" aria-current="page" href="#">Service</a>
+            </li>
+            <li class="nav-item p-1">
+              <a class="nav-link" aria-current="page" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item p-1">
+              <a class="nav-link" aria-current="page" href="#">About</a>
+            </li>
+            <li class="nav-item p-1">
+              <a class="nav-link" aria-current="page" href="#">Contact</a>
+            </li>
+          </ul>
+          <div class="search ps-3 pe-3 d-none d-lg-block">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+          <a class="btn btn-primary rounded-pill" href="#" role="button"
+            >Link</a
+          >
+        </div>
+      </div>
+    </nav>
+    <div class="landing d-flex justify-content-center align-items-center">
+      <div class="text-containt text-light">
+        <h1>Taste The Creativity</h1>
+        <p class="fs-6 text-white-50 mb-4">
+          we make awesome graphic and web design
+        </p>
+        <a class="btn btn-primary rounded-pill" href="#" role="button"
+          >Get Started</a
+        >
+      </div>
+    </div>
+    <div class="features">
+      <div class="container text-center pt-5 pb-5">
+        <div class="main-title mt-4 mb-4 position-relative">
+          <i class="fa-solid fa-layer-group mb-4 fs-1"></i>
+          <h2 class="text-secondary-emphasis">We are Good at</h2>
+          <p class="text-black-50 text-uppercase">Some of thease stuff under</p>
+        </div>
+      
+      <div class="row">
+        <div class="col-md-6 col-lg-4">
+          <div class="feat">
 
-    <nav  class="navbar navbar-expand-lg  sticky-top " >
-        <div class="container">
-          <a class="navbar-logo" href="#">khaoula</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fa-solid fa-bars"></i>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item p-1 ">
-                <a class="nav-link Active " aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item p-1 ">
-                <a class="nav-link " aria-current="page" href="#">Service</a>
-              </li><li class="nav-item p-1 ">
-                <a class="nav-link  " aria-current="page" href="#">Portfolio</a>
-              </li><li class="nav-item p-1 ">
-                <a class="nav-link " aria-current="page" href="#">About</a>
-              </li>
-              <li class="nav-item p-1 ">
-                <a class="nav-link  " aria-current="page" href="#">Contact</a>
-              </li>
-              
-            </ul>
-            <div class="search ps-3 pe-3 d-none d-lg-block">
-                <i class="fa-solid fa-magnifying-glass"></i>
+            <div class="icon-holder position-relative">
+              <i class="fa-solid fa-1 position-absolute bottom-0 number"></i>
+              <i class="fa-solid fa-pen fa-4x position-absolute bottom-0 icon"></i>
             </div>
-            <a class="btn btn-primary rounded-pill" href="#" role="button">Link</a>
+            <h4 class="mt-3 mb-4 text-uppercase">Graphic Design</h4>
+            <p class="text-black-50 lh-lg">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+              officiis ea laboriosam facilis temporibus atque.
+            </p>
           </div>
         </div>
-      </nav>
-      <div class="landing d-flex  justify-content-center align-items-center">
-       <div class="text-containt text-light">
-        <h1>Taste The Creativity</h1>
-        <P class="fs-6 text-white-50 mb-4">we make awesome graphic and web design </P>
-        <a class="btn btn-primary rounded-pill " href="#" role="button">Get Started</a>
-       </div>
+        <!-- /// -->
+        <div class="col-md-6 col-lg-4">
+          <div class="feat">
+
+            <div class="icon-holder position-relative">
+              <i class="fa-solid fa-2 position-absolute bottom-0 number"></i>
+              <i class="fa-solid fa-tv fa-4x position-absolute bottom-0 icon"></i>
+            </div>
+            <h4 class="mt-3 mb-4 text-uppercase">Graphic Design</h4>
+            <p class="text-black-50 lh-lg">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+              officiis ea laboriosam facilis temporibus atque.
+            </p>
+          </div>
+        </div>
+        <!-- //// -->
+        <div class="col-md-6 col-lg-4">
+          <div class="feat">
+
+            <div class="icon-holder position-relative">
+              <i class="fa-solid fa-3 position-absolute bottom-0 number"></i>
+              <i class="fa-solid fa-plug fa-4x position-absolute bottom-0 icon"></i>
+            </div>
+            <h4 class="mt-3 mb-4 text-uppercase">Graphic Design</h4>
+            <p class="text-black-50 lh-lg">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+              officiis ea laboriosam facilis temporibus atque.
+            </p>
+          </div>
+        </div>
       </div>
+    </div></div>
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-</body>  
+  </body>
 </html>
