--- a/index.html
+++ b/index.html
@@ -77,54 +77,117 @@
           <h2 class="text-secondary-emphasis">We are Good at</h2>
           <p class="text-black-50 text-uppercase">Some of thease stuff under</p>
         </div>
-      
-      <div class="row">
-        <div class="col-md-6 col-lg-4">
-          <div class="feat">
 
-            <div class="icon-holder position-relative">
-              <i class="fa-solid fa-1 position-absolute bottom-0 number"></i>
-              <i class="fa-solid fa-pen fa-4x position-absolute bottom-0 icon"></i>
+        <div class="row">
+          <div class="col-md-6 col-lg-4">
+            <div class="feat">
+              <div class="icon-holder position-relative">
+                <i class="fa-solid fa-1 position-absolute bottom-0 number"></i>
+                <i
+                  class="fa-solid fa-pen fa-4x position-absolute bottom-0 icon"
+                ></i>
+              </div>
+              <h4 class="mt-3 mb-4 text-uppercase">Graphic Design</h4>
+              <p class="text-black-50 lh-lg">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                officiis ea laboriosam facilis temporibus atque.
+              </p>
             </div>
-            <h4 class="mt-3 mb-4 text-uppercase">Graphic Design</h4>
-            <p class="text-black-50 lh-lg">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-              officiis ea laboriosam facilis temporibus atque.
-            </p>
           </div>
-        </div>
-        <!-- /// -->
-        <div class="col-md-6 col-lg-4">
-          <div class="feat">
-
-            <div class="icon-holder position-relative">
-              <i class="fa-solid fa-2 position-absolute bottom-0 number"></i>
-              <i class="fa-solid fa-tv fa-4x position-absolute bottom-0 icon"></i>
+          <!-- /// -->
+          <div class="col-md-6 col-lg-4">
+            <div class="feat">
+              <div class="icon-holder position-relative">
+                <i class="fa-solid fa-2 position-absolute bottom-0 number"></i>
+                <i
+                  class="fa-solid fa-tv fa-4x position-absolute bottom-0 icon"
+                ></i>
+              </div>
+              <h4 class="mt-3 mb-4 text-uppercase">Graphic Design</h4>
+              <p class="text-black-50 lh-lg">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                officiis ea laboriosam facilis temporibus atque.
+              </p>
             </div>
-            <h4 class="mt-3 mb-4 text-uppercase">Graphic Design</h4>
-            <p class="text-black-50 lh-lg">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-              officiis ea laboriosam facilis temporibus atque.
-            </p>
           </div>
-        </div>
-        <!-- //// -->
-        <div class="col-md-6 col-lg-4">
-          <div class="feat">
-
-            <div class="icon-holder position-relative">
-              <i class="fa-solid fa-3 position-absolute bottom-0 number"></i>
-              <i class="fa-solid fa-plug fa-4x position-absolute bottom-0 icon"></i>
+          <!-- //// -->
+          <div class="col-md-6 col-lg-4">
+            <div class="feat">
+              <div class="icon-holder position-relative">
+                <i class="fa-solid fa-3 position-absolute bottom-0 number"></i>
+                <i
+                  class="fa-solid fa-plug fa-4x position-absolute bottom-0 icon"
+                ></i>
+              </div>
+              <h4 class="mt-3 mb-4 text-uppercase">Graphic Design</h4>
+              <p class="text-black-50 lh-lg">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                officiis ea laboriosam facilis temporibus atque.
+              </p>
             </div>
-            <h4 class="mt-3 mb-4 text-uppercase">Graphic Design</h4>
-            <p class="text-black-50 lh-lg">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-              officiis ea laboriosam facilis temporibus atque.
-            </p>
           </div>
         </div>
       </div>
-    </div></div>
+    </div>
+    <div class="our-work text-center pt-5 pb-5">
+      <div class="container">
+        <div class="main-title mt-4 mb-4 position-relative">
+          <i class="fa-solid fa-layer-group mb-4 fs-1"></i>
+          <h2 class="text-secondary-emphasis">We Make This</h2>
+          <p class="text-black-50 text-uppercase">Prepare To Be Amazed</p>
+        </div>
+        <ul class="list-unstyled d-flex justify-content-center mt-5 mb-5">
+          <li class="active rounded-pill">All</li>
+          <li>Design</li>
+          <li>Code</li>
+          <li>Photo</li>
+          <li>App</li>
+        </ul>
+        <div class="row row-gap-3 col-gap-3">
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box bg-white " data-work="Application">
+              <img src="css/image/6.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box bg-white " data-work="Application">
+              <img src="css/image/3.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box bg-white " data-work="Application">
+              <img src="css/image/4.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box bg-white " data-work="Application">
+              <img src="css/image/7.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box bg-white " data-work="Application">
+              <img src="css/image/6.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box bg-white " data-work="Application">
+              <img src="css/image/3.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box bg-white " data-work="Application">
+              <img src="css/image/4.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box bg-white " data-work="Application">
+              <img src="css/image/7.jpg" alt="" class="img-fluid" />
+            </div>
+          </div>
+        </div>
+        <button type="button" class="btn btn-primary mt-5 rounded-pill ">I Want More</button>
+      </div>
+    </div>
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
