--- a/index.html
+++ b/index.html
@@ -145,47 +145,89 @@
         </ul>
         <div class="row row-gap-3 col-gap-3">
           <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box bg-white " data-work="Application">
+            <div class="box bg-white" data-work="Application">
               <img src="css/image/6.jpg" alt="" class="img-fluid" />
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box bg-white " data-work="Application">
+            <div class="box bg-white" data-work="Application">
               <img src="css/image/3.jpg" alt="" class="img-fluid" />
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box bg-white " data-work="Application">
+            <div class="box bg-white" data-work="Application">
               <img src="css/image/4.jpg" alt="" class="img-fluid" />
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box bg-white " data-work="Application">
+            <div class="box bg-white" data-work="Application">
               <img src="css/image/7.jpg" alt="" class="img-fluid" />
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box bg-white " data-work="Application">
+            <div class="box bg-white" data-work="Application">
               <img src="css/image/6.jpg" alt="" class="img-fluid" />
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box bg-white " data-work="Application">
+            <div class="box bg-white" data-work="Application">
               <img src="css/image/3.jpg" alt="" class="img-fluid" />
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box bg-white " data-work="Application">
+            <div class="box bg-white" data-work="Application">
               <img src="css/image/4.jpg" alt="" class="img-fluid" />
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box bg-white " data-work="Application">
+            <div class="box bg-white" data-work="Application">
               <img src="css/image/7.jpg" alt="" class="img-fluid" />
             </div>
           </div>
         </div>
-        <button type="button" class="btn btn-primary mt-5 rounded-pill ">I Want More</button>
+        <button type="button" class="btn btn-primary mt-5 rounded-pill">
+          I Want More
+        </button>
+      </div>
+    </div>
+    <div class="stuff pt-5">
+      <div class="container">
+        <div class="main-title text-center mt-4 mb-4 position-relative">
+          <i class="fa-solid fa-layer-group mb-4 fs-1"></i>
+          <h2 class="text-secondary-emphasis">Some Stuff About Us</h2>
+          <p class="text-black-50 text-uppercase">The Great team</p>
+        </div>
+        <p class="description text-black-50 text-center mb-5 m-auto">
+          Lorem ipsum dolor sit amet consectetur,adipisicing elit. Aut
+          voluptatum ipsam inventore ?
+        </p>
+        <div class="row align-items-center">
+          <div class="col-lg-4 mb-4 text-center text-md-start">
+            <div class="text">
+              <h4>Retina Design</h4>
+              <p class="text-black-50 fs-6">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
+                vero ipsum ad consequuntur aliquam.
+              </p>
+              <p class="text-black-50 fs-6">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
+                vero ipsum ad consequuntur aliquam. Doloribus dolorum quo,
+                exercitationem ut provident modi ipsam expedita
+              </p>
+              <a
+                class="btn btn-primary rounded-pill text-uppercase m-auto"
+                href="#"
+                role="button"
+                >Order Me One</a
+              >
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="image">
+              <img class="img-fluid" src="css/image/4.jpg" alt="">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="js/all.min.js"></script>
