--- a/index.html
+++ b/index.html
@@ -224,7 +224,62 @@
           </div>
           <div class="col-lg-8">
             <div class="image">
-              <img class="img-fluid" src="css/image/4.jpg" alt="">
+              <img class="img-fluid" src="css/image/4.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="team text-center pb-5 pt-5">
+      <div class="container">
+        <h2 class="fw-bold">Meet The Team</h2>
+        <p class="text-black-50">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima
+          pariatur, hic ipsum atque neque nemo aspernatur, tempore a incidunt
+          consectetur
+        </p>
+        <div class="row mt-5">
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white">
+              <img class="img-fluid" src="css/image/6.jpg" alt="" />
+              <h4 class="text-center p-3">Luke skywalker00</h4>
+              <blockquote class="text-black-50 p-2">
+                "alias molestias culpa, provident, pariatur fuga illo
+                praesentium!"
+              </blockquote>
+            </div>
+          </div>
+          <!-- /// -->
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white">
+              <img class="img-fluid" src="css/image/6.jpg" alt="" />
+              <h4 class="text-center p-3">Luke skywalker01</h4>
+              <blockquote class="text-black-50 p-2">
+                "alias molestias culpa, provident, pariatur fuga illo
+                praesentium!"
+              </blockquote>
+            </div>
+          </div>
+          <!-- /// -->
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white">
+              <img class="img-fluid" src="css/image/6.jpg" alt="" />
+              <h4 class="text-center p-3">Luke skywalker02</h4>
+              <blockquote class="text-black-50 p-2">
+                "alias molestias culpa, provident, pariatur fuga illo
+                praesentium!"
+              </blockquote>
+            </div>
+          </div>
+          <!-- // -->
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white">
+              <img class="img-fluid" src="css/image/6.jpg" alt="" />
+              <h4 class="text-center p-3">Luke skywalker03</h4>
+              <blockquote class="text-black-50 p-2">
+                "alias molestias culpa, provident, pariatur fuga illo
+                praesentium!"
+              </blockquote>
             </div>
           </div>
         </div>
