--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div class="row mt-5">
           <div class="col-md-6 col-lg-3">
             <div class="box bg-white">
-              <img class="img-fluid" src="css/image/6.jpg" alt="" />
+              <img class="img-fluid" src="css/image/team/3.jpg" alt="" />
               <h4 class="text-center p-3">Luke skywalker00</h4>
               <blockquote class="text-black-50 p-2">
                 "alias molestias culpa, provident, pariatur fuga illo
@@ -252,7 +252,7 @@
           <!-- /// -->
           <div class="col-md-6 col-lg-3">
             <div class="box bg-white">
-              <img class="img-fluid" src="css/image/6.jpg" alt="" />
+              <img class="img-fluid" src="css/image/team/2.jpg" alt="" />
               <h4 class="text-center p-3">Luke skywalker01</h4>
               <blockquote class="text-black-50 p-2">
                 "alias molestias culpa, provident, pariatur fuga illo
@@ -263,7 +263,7 @@
           <!-- /// -->
           <div class="col-md-6 col-lg-3">
             <div class="box bg-white">
-              <img class="img-fluid" src="css/image/6.jpg" alt="" />
+              <img class="img-fluid" src="css/image/team/3.jpg" alt="" />
               <h4 class="text-center p-3">Luke skywalker02</h4>
               <blockquote class="text-black-50 p-2">
                 "alias molestias culpa, provident, pariatur fuga illo
@@ -274,7 +274,7 @@
           <!-- // -->
           <div class="col-md-6 col-lg-3">
             <div class="box bg-white">
-              <img class="img-fluid" src="css/image/6.jpg" alt="" />
+              <img class="img-fluid" src="css/image/team/2.jpg" alt="" />
               <h4 class="text-center p-3">Luke skywalker03</h4>
               <blockquote class="text-black-50 p-2">
                 "alias molestias culpa, provident, pariatur fuga illo
@@ -283,6 +283,94 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="techs text-center pb-5 pt-5">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-sm-6 col-md-4 col-lg-2">
+            <img class="img-fluid" src="css/image/team/11.png" alt="" />
+          </div>
+          <!-- //// -->
+          <div class="col-sm-6 col-md-4 col-lg-2">
+            <img class="img-fluid" src="css/image/team/22.png" alt="" />
+          </div>
+          <!-- //// -->
+          <div class="col-sm-6 col-md-4 col-lg-2">
+            <img class="img-fluid" src="css/image/team/33.png" alt="" />
+          </div>
+          <!-- //// -->
+          <div class="col-sm-6 col-md-4 col-lg-2">
+            <img class="img-fluid" src="css/image/team/44.png" alt="" />
+          </div>
+          <!-- //// -->
+          <div class="col-sm-6 col-md-4 col-lg-2">
+            <img class="img-fluid" src="css/image/team/55.png" alt="" />
+          </div>
+          <!-- //// -->
+          <div class="col-sm-6 col-md-4 col-lg-2">
+            <img class="img-fluid" src="css/image/team/66.png" alt="" />
+          </div>
+          <!-- //// -->
+        </div>
+      </div>
+    </div>
+    <div class="project text-center pb-5 pt-5">
+      <h2 class="text-white">Start Your Project Now</h2>
+      <p class="text-white-50 mb-5 mt-3 m-auto">
+        leave your description we start Lorem ipsum dolor Quis qui rem commodi
+        sit hic possimus ex repellendus blanditiis, adip
+      </p>
+      <a
+        class="btn btn-primary rounded-pill text-uppercase mb-5 mt-2 m-auto"
+        href="#"
+        role="button"
+        >Start Project
+      </a>
+    </div>
+    <div class="blog pt-5 pb-5">
+      <div class="container text-center ">
+        <div class="main-title mt-4 mb-4 position-relative">
+          <i class="fa-solid fa-layer-group mb-4 fs-1"></i>
+          <h2 class="text-secondary-emphasis">Read Our Blog</h2>
+          <p class="text-black-50 text-uppercase">New Stories</p>
+        </div>
+        <div class="row mt-5">
+          <div class="col-lg-4 col-sm-6">
+            <div class="card" style="width: 18rem">
+              <div class="card-body">
+                <img class="img-fluid" src="css/image/3.jpg" alt="#" />
+                <h6 class="mt-3 mb-2 text-black-50 text-start">17 juin 2027</h6>
+                <h5 class="card-title text-start">
+                  similique reiciendis amet excepturi
+                </h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="card" style="width: 18rem">
+              <div class="card-body">
+                <img class="img-fluid" src="css/image/3.jpg" alt="#" />
+                <h6 class="mt-3 mb-2 text-black-50 text-start">17 juin 2027</h6>
+                <h5 class="card-title text-start">
+                  similique reiciendis amet excepturi
+                </h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="card" style="width: 18rem">
+              <div class="card-body">
+                <img class="img-fluid" src="css/image/3.jpg" alt="#" />
+                <h6 class="mt-3 mb-2 text-black-50 text-start">17 juin 2027</h6>
+                <h5 class="card-title text-start">
+                  similique reiciendis amet excepturi
+                </h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="btn btn-primary rounded-pill text-uppercase mt-5 mb-5  " href="#" role="button">More</a>
       </div>
     </div>
     <script src="js/all.min.js"></script>
