--- a/index.html
+++ b/index.html
@@ -373,6 +373,23 @@
         <a class="btn btn-primary rounded-pill text-uppercase mt-5 mb-5  " href="#" role="button">More</a>
       </div>
     </div>
+    <div class="subscribe pt-5 pb-5 text-center text-md-start">
+      <div class="container">
+        <form class="row align-items-center">
+          <div class="col-md-6 col-lg-4">
+            <div class="fw-bold fs-5 mt-1">
+              Subscribe to our Newsletter
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-6">
+            <input class="in w-100 text-white bg-transparent " type="text" placeholder="enter your emeil ">
+          </div>
+          <div class="col-md-4 col-lg-2 mt-3">
+            <input class="btn rounded-pill " type="button" value="Send">
+          </div>
+        </form>
+      </div>
+    </div>
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
