--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       </a>
     </div>
     <div class="blog pt-5 pb-5">
-      <div class="container text-center ">
+      <div class="container text-center">
         <div class="main-title mt-4 mb-4 position-relative">
           <i class="fa-solid fa-layer-group mb-4 fs-1"></i>
           <h2 class="text-secondary-emphasis">Read Our Blog</h2>
@@ -370,24 +370,123 @@
             </div>
           </div>
         </div>
-        <a class="btn btn-primary rounded-pill text-uppercase mt-5 mb-5  " href="#" role="button">More</a>
+        <a
+          class="btn btn-primary rounded-pill text-uppercase mt-5 mb-5"
+          href="#"
+          role="button"
+          >More</a
+        >
       </div>
     </div>
     <div class="subscribe pt-5 pb-5 text-center text-md-start">
       <div class="container">
         <form class="row align-items-center">
           <div class="col-md-6 col-lg-4">
-            <div class="fw-bold fs-5 mt-1">
-              Subscribe to our Newsletter
-            </div>
+            <div class="fw-bold fs-5 mt-1">Subscribe to our Newsletter</div>
           </div>
           <div class="col-md-6 col-lg-6">
-            <input class="in w-100 text-white bg-transparent " type="text" placeholder="enter your emeil ">
+            <input
+              class="in w-100 text-white bg-transparent"
+              type="text"
+              placeholder="enter your emeil "
+            />
           </div>
           <div class="col-md-4 col-lg-2 mt-3">
-            <input class="btn rounded-pill " type="button" value="Send">
+            <input class="btn rounded-pill" type="button" value="Send" />
           </div>
         </form>
+      </div>
+    </div>
+    <div class="footer pt-5 pb-5 text-center text-white-50 text-md-start">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-4">
+            <div class="info">
+              <a class="footer-logo mb-4" href="#">khaoula</a>
+              <p class="mb-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+              <div class="copyright mb-5">
+                created by <span>Graphberry</span>
+                <div>&copy; 2024 - <span>Bondi Inc</span></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-2">
+            <h5 class="text-light">Links</h5>
+            <ul class="list-unstyled">
+              <li class="nav-item p-1">
+                <a class="nav-link Active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item p-1">
+                <a class="nav-link" aria-current="page" href="#">Service</a>
+              </li>
+              <li class="nav-item p-1">
+                <a class="nav-link" aria-current="page" href="#">Portfolio</a>
+              </li>
+              <li class="nav-item p-1">
+                <a class="nav-link" aria-current="page" href="#">About</a>
+              </li>
+              <li class="nav-item p-1">
+                <a class="nav-link" aria-current="page" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-lg-2">
+            <h5 class="text-light">About Us</h5>
+            <ul class="list-unstyled">
+              <li class="nav-item p-1">
+                <a class="nav-link Active" aria-current="page" href="#"
+                  >Sing in</a
+                >
+              </li>
+              <li class="nav-item p-1">
+                <a class="nav-link" aria-current="page" href="#">Register</a>
+              </li>
+              <li class="nav-item p-1">
+                <a class="nav-link" aria-current="page" href="#">About Us</a>
+              </li>
+              <li class="nav-item p-1">
+                <a class="nav-link" aria-current="page" href="#">Blog</a>
+              </li>
+              <li class="nav-item p-1">
+                <a class="nav-link" aria-current="page" href="#">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="contact">
+              <h5 class="text-light">Contact Us</h5>
+              <p class="lh-lg mt-3 mb-5">
+                Lorem ipsum dolor sit amet Perferendis molestias aliquam nam
+                quidem.
+              </p>
+              <a class="btn rounded-pill main-btn w-1" href="#">Graphberry@gmail.com</a>
+            <ul class="d-flex mt-5 list-unstyled gap-3">
+              <li>
+                <a class="d-block text-light" href="#">
+                  <i class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2"></i>
+                </a>
+              </li>
+              <li>
+                <a class="d-block text-light" href="#">
+                  <i class="fa-brands fa-twitter fa-lg twitter rounded-circle p-2"></i>
+                </a>
+              </li>
+              <li>
+                <a class="d-block text-light" href="#">
+                  <i class="fa-brands fa-linkedin fa-lg linkedin rounded-circle p-2"></i>
+                </a>
+              </li>
+              <li>
+                <a class="d-block text-light" href="#">
+                  <i class="fa-brands fa-instagram fa-lg instagram rounded-circle p-2"></i>
+                </a>
+              </li>
+            </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="js/all.min.js"></script>
